# simple_statemachine

./: .gitignore  Cargo.toml  LICENSE  README.md  statemachine_dsl.txt
src/: lib.rs
statemachine_proc_macros/: Cargo.toml
statemachine_proc_macros/src/: lib.rs
tests/: tests.rs
