[package]
name = "statemachine_proc_macros"
version = "0.1.0"
edition = "2021"


[lib]
name = "statemachine_proc_macros"
path = "src/lib.rs"
proc-macro=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "*", features = ["extra-traits"] }
quote="*"
proc-macro2 = "*"
